# kinodynamic-expansion-RRT-star-path-planner

./: README_PFMS.md
.history/skeleton/a3_skeleton/: README_20250404134349.md  README_20250404134351.md  README_20250404134353.md  README_20250404134408.md  README_20250404134410.md  README_20250404134417.md  README_20250404134419.md  README_20250404134434.md  README_20250404134440.md  README_20250404134445.md  README_20250404134449.md  README_20250404134451.md  README_20250404134458.md  README_20250404134459.md  README_20250404134507.md  README_20250404134526.md  README_20250404134537.md  README_20250404134540.md  README_20250404134551.md  README_20250404134558.md  README_20250404134601.md  README_20250404134603.md  README_20250404134604.md  README_20250404134613.md  README_20250404134649.md  README_20250404134652.md  README_20250404134657.md  README_20250404134659.md  README_20250404134720.md  README_20250404134723.md  README_20250404134726.md  README_20250404134848.md  README_20250404134851.md
quizzes/quiz0/a1/: arrays.cpp  main.cpp
quizzes/quiz0/a2/: sample.h
quizzes/quiz1/: TEST.txt
quizzes/quiz1/a1/: person.cpp  person.h  processing.cpp
quizzes/quiz1/a1/test/: utest.cpp
quizzes/quiz1/a2/: processing.cpp  rectangle.cpp  rectangle.h  shape.h
quizzes/quiz1/a2/test/: utest.cpp
quizzes/quiz2/: README.md  TEST.txt
quizzes/quiz2/a1/: analysis.cpp  analysis.h  main.cpp
quizzes/quiz2/a1/test/: utest.cpp
quizzes/quiz2/a2/: container_ops.cpp
quizzes/quiz2/a2/test/: utest.cpp
quizzes/quiz3/: TEST.txt
quizzes/quiz3/a1/: analysis.cpp  analysis.h  main.cpp  tf2.cpp
quizzes/quiz3/a1/test/: utest.cpp
quizzes/quiz3/a2/: analysis.cpp  main.cpp
quizzes/quiz4/: README.md  TEST.txt
quizzes/quiz4/a1/: controller.cpp  quadcopter.cpp
quizzes/quiz4/a1/test/: utest.cpp
quizzes/quiz4/a2/src/: analysis.cpp
quizzes/quiz4/a2/test/: utest.cpp
quizzes/quiz5/: TEST.txt
quizzes/quiz5/a1/marking/: utest.cpp  utest2.cpp
quizzes/quiz5/a1/src/: laserprocessing.cpp  laserprocessing.h
quizzes/quiz5/a1/test/: utest.cpp
quizzes/quiz5/a2/marking/: utest2.cpp
quizzes/quiz5/a2/src/: rangeprocessing.cpp  rangeprocessing.h
scratch/a1_skeleton/: ackerman.cpp  ackerman.h  controller.cpp  controller.h  controller_helper.h  controllers_helper.h  main.cpp  mission.cpp  mission.h  tempCodeRunnerFile.h
scratch/a1_skeleton/test/: my_test.cpp  tempCodeRunnerFile.cpp  test_audi.cpp  test_calculations.cpp  test_mission.cpp
scratch/a1_snippets/: CMakeLists.txt  command_goals.cpp  command_uav.cpp  command_ugv.cpp  index.dox
scratch/a2_skeleton/: CMakeLists.txt  ackerman.cpp  controller.cpp  controller.h  controllerinterface.h  quadcopter.cpp  quadcopter.h
scratch/a2_skeleton/test/: CMakeLists.txt  audiCheckOriginToDestination.cpp  audiReachGoal.cpp  audiReachGoals.cpp  quadcopterReachGoal.cpp  quadcopterReachGoals.cpp
skeleton/a1_skeleton/: CMakeLists.txt  ackerman.cpp  ackerman.h  controller.cpp  controller.h  controller_helper.h  controllerinterface.h  main.cpp  mission.cpp  mission.h
skeleton/a1_skeleton/test/: CMakeLists.txt  a1_test_helper.h  mission_test.h  test_audi.cpp  test_calculations.cpp  test_mission.cpp
skeleton/a1_snippets/: CMakeLists.txt  command_uav.cpp  command_ugv.cpp  populate_back.cpp  populate_first.cpp  tempCodeRunnerFile.cpp
skeleton/a2_skeleton/: CMakeLists.txt  ackerman.cpp  ackerman.h  ackermansearch.cpp  ackermansearch.h  controller.cpp  controller.h  controllerinterface.h  graphsearch.cpp  graphsearch.h  index.dox  logger.cpp  main.cpp  mission.cpp  mission.h  quadcopter.cpp  quadcopter.h  quadcoptersearch.cpp  quadcoptersearch.h  supersearch.cpp  supersearch.h
skeleton/a2_skeleton/test/: CMakeLists.txt  audiReachGoal.cpp  audiReachGoals.cpp  getPlatformAssociationTest.cpp  graphSearchTest.cpp  missionExReachGoals.cpp  quadcopterReachGoal.cpp  quadcopterReachGoals.cpp  superTest.cpp  tempCodeRunnerFile.cpp
skeleton/a2_snippets/: CMakeLists.txt  control_ugv.cpp  index.dox
skeleton/a3_skeleton/: CMakeLists.txt  README.md  mainpage.dox  package.xml
skeleton/a3_skeleton/config/: KEparams.yaml  RRTparams.yaml
skeleton/a3_skeleton/data/: ACKERMAN.TXT  GOALS.TXT
skeleton/a3_skeleton/doc/: manifest.yaml
skeleton/a3_skeleton/src/: ackerman.cpp  ackerman.h  controller.cpp  controller.h  controllerinterface.h  laserprocessing.cpp  laserprocessing.h  main.cpp  my_goals_publisher.cpp  my_logger.cpp  sample.cpp  sample.h  visualize.txt
skeleton/a3_skeleton/src/heuristicRRTstar/: heuristicRRTstar.cpp  heuristicRRTstar.h
skeleton/a3_skeleton/test/: inPathTest.cpp  obstructedTest.cpp  outPathTest.cpp  pathPlanningTest.cpp  twoClosestPointTest.cpp  utest.cpp
skeleton/a3_support/data/: ACKERMAN.TXT  QUADCOPTER.TXT
tutorials/week00/starter/: hello
tutorials/week01/starter/: arrays.cpp  enum_example.cpp  pointers  pointers.cpp
tutorials/week02/starter/: circle.h  circle_main.cpp
tutorials/week03/starter/: CMakeLists.txt  shape.cpp
tutorials/week04/: PREWORK.cpp  README.md  TUTORIAL.md
tutorials/week04/examples/unit_testing/: CMakeLists.txt  project1.h
tutorials/week04/examples/unit_testing/test/: CMakeLists.txt  utest.cpp
tutorials/week05/: README.md
tutorials/week06/: README.md  TUTORIAL.md
tutorials/week06/starter/teleop/: CMakeLists.txt  ackerman.cpp  ackerman.h  main.cpp
tutorials/week07/: README.md  TUTORIAL.md
tutorials/week08/: TUTORIAL.md
tutorials/week09/: README.md
tutorials/week10/: README.md  TUTORIAL.md
tutorials/week10/wk10_starter/quadcopter_control/: CMakeLists.txt  package.xml
tutorials/week10/wk10_starter/quadcopter_control/src/: controller.cpp  controller.h  controllerinterface.h  main.cpp  quadcopter.cpp  quadcopter.h
tutorials/week11/: README.md  TUTORIAL.md
tutorials/week11/wk11_starter/tests_masterclass/: CMakeLists.txt  package.xml
tutorials/week11/wk11_starter/tests_masterclass/src/: detection_node.cpp  laserprocessing.cpp  main.cpp
tutorials/week11/wk11_starter/tests_masterclass/test/: utest.cpp
tutorials/week11/wk11_starter/tests_masterclass/test/bag/: sample.bag
(+84 files in other folders)
